feat: enable graphql

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -9,7 +9,7 @@
     "timestamps": true
   },
   "attributes": {
-    "avatar": {
+    "photo": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
