--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "strapi-plugin-graphql": "3.1.1",
     "strapi-plugin-upload": "3.1.1",
     "strapi-plugin-users-permissions": "3.1.1",
+    "strapi-provider-email-sendgrid": "^3.1.1",
+    "strapi-provider-upload-aws-s3": "^3.1.1",
     "strapi-utils": "3.1.1"
   },
   "author": {
